[package]
name = "actix-auth"
version = "0.1.0"
authors = ["Hui Tang <duriantang@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
bcrypt = "0.3.0"
chrono = { version = "0.4.6", features = ['serde'] }
diesel = { version = "1.4.1", features = ['postgres', 'uuid', 'r2d2', 'chrono'] }
dotenv = "0.13.0"
env_logger = "0.6.0"
failure = "0.1.5"
futures = "0.1.25"
r2d2 = "0.8.3"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
sparkpost = "0.5.2"
uuid = { version = "^0.6.0", features = ['serde', 'v4'] }
log = { version = "0.4.6", features = ['std', 'serde'] }
pretty_env_logger = "0.3.0"
